# rust-kafka-101

./: README.md
part1/: Cargo.toml
part1/src/: 1_producer_simple.rs  2_threaded_producer.rs  3_JSON_payload.rs
part2/: Cargo.toml
part2/src/: 1_consumer_simple.rs  2_consumer_callback.rs  3_manual_commit.rs
